# agentmail

./: .gitignore  .npmrc  AGENTS.md  Cargo.toml  README.md  install-rust-binary.sh  install.sh  package-lock.json  package.json  vitest.config.ts
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: ANALYSIS-PLAN-SCATTER-MERGE.md  ARCHITECTURE.md  ASK-TESTING.md  ASK.md  BUGS.md  COGS.md  EXA.md  EXPERIMENT-PLAN-SCATTER-SEARCH.md  MCP.md  OPPORTUNITIES.md  PERFORMANCE.md  RELEASING.md  RUST_PORT.md  RUST_README.md  SCHEMA-UPGRADE-V9-V12.md  STRATEGY.md  SYNC.md  VALIDATING_INSTALLATION.md  VISION.md  ask-algorithm-review.md  feedback-processed.md  merge-review-OPP-020-ask.md  phase2-comparison-results.md  phase2-removal-summary.md
examples/: parse_eml.rs
node/: README.md  install-npm-legacy.sh  install.sh  package.json  vitest.eval.config.ts
rust/: Cargo.toml  README.md
rust/src/: ask_stub.rs  config.rs  inbox_window.rs  lib.rs  mail_read.rs  main.rs  rebuild_index.rs  refresh.rs  setup.rs  status.rs  thread_view.rs
rust/src/ask/: agent.rs  context.rs  mod.rs  openai_tools.rs  tools.rs
rust/src/attachments/: mod.rs
rust/src/db/: message_persist.rs  mod.rs  schema.rs
rust/src/inbox/: scan.rs
rust/src/mcp/: mod.rs
rust/src/search/: contact_rank.rs  edit_distance.rs  engine.rs  escape.rs  filter.rs  infer_name.rs  json_format.rs  mod.rs  nicknames.rs  noreply.rs  normalize.rs  phonetics.rs  query_parse.rs  signature.rs  who.rs
rust/src/send/: draft_body.rs  draft_store.rs  mod.rs  recipients.rs  smtp_resolve.rs  threading.rs
rust/src/sync/: background_spawn.rs  fetch_timeout.rs  maildir.rs  mod.rs  parse_message.rs  parse_since.rs  process_lock.rs  retry.rs  run.rs  sync_log.rs  transport.rs  windows.rs
rust/src/wizard/: mod.rs
rust/tests/: attachments_extract.rs  config_schema_status.rs  inbox_scan.rs  mcp_stdio.rs  phase1.rs  phase2.rs  phase3.rs  phase4.rs  phase5.rs  phase6.rs  phase7.rs  phase8.rs  phase9.rs  search_fts.rs  send_drafts.rs  setup_read_rebuild.rs  sync_parse_maildir.rs  sync_run_fake_imap.rs  who_identity.rs
scripts/: README.md  generate-fixtures-from-inbox.ts  install-claude-skill.mjs  install-cli.ts  install-openclaw-skill.mjs  post-build.js  publish.sh  rebuild-better-sqlite.mjs  test-install.sh  validate-release.sh
skills/: README.md
src/: ask_stub.rs  config.rs  draft.rs  ids.rs  index.ts  lib.rs  mail_read.rs  main.rs  refresh.rs  (+5 more)
(+344 files in other folders)
