[package]
name = "zmail"
version = "0.1.0"
edition = "2021"
description = "Agent-first email — Rust CLI and MCP (primary implementation in-repo)"
default-run = "zmail"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
# Use `bundled` only — `bundled-full` pulls `extra_check`, which errors on PRAGMAs that return rows.
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
dirs = "5.0"
chrono = "0.4"
mail-parser = "0.9"
htmd = "0.1"
libc = "0.2.183"
regex = "1.12.3"
rphonetic = "3"
strsim = "0.11"
phonenumber = "0.3"
rayon = "1.10"
calamine = "0.26"
docx-rs = "0.4"
pdf-extract = "0.10"
serde_yaml = "0.9"
imap = { version = "3.0.0-alpha.15", default-features = true, features = ["native-tls"] }
async-openai = "0.27"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3"
base64 = "0.22"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "native-tls", "builder"] }
uuid = { version = "1", features = ["v4"] }
pulldown-cmark = "0.12"
inquire = "0.7"
indicatif = "0.17"

[dev-dependencies]
printpdf = "0.7"
rust_xlsxwriter = "0.79"
tempfile = "3.14"

[[bin]]
name = "zmail"
path = "src/main.rs"

[[bin]]
name = "cargo-install-local"
path = "src/bin/cargo-install-local.rs"

[lib]
name = "zmail"
path = "src/lib.rs"
