[package]
name = "zmail"
version = "0.1.0"
edition = "2021"
description = "Agent-first email — Rust port (work in progress)"
default-run = "zmail"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
# Use `bundled` only — `bundled-full` pulls `extra_check`, which errors on PRAGMAs that return rows.
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
dirs = "5.0"
chrono = "0.4"
mail-parser = "0.9"
htmd = "0.1"
libc = "0.2.183"
regex = "1.12.3"
rphonetic = "3"
strsim = "0.11"
phonenumber = "0.3"
rayon = "1.10"
calamine = "0.26"
docx-rs = "0.4"
pdf-extract = "0.10"
serde_yaml = "0.9"

[dev-dependencies]
printpdf = "0.7"
rust_xlsxwriter = "0.79"
tempfile = "3.14"

[[bin]]
name = "zmail"
path = "src/main.rs"

[lib]
name = "zmail"
path = "src/lib.rs"
